# tower

./: Cargo.toml  aggregator.sh  command.txt  command2.txt  command_host2.txt  job.sh  job1.sh  proxy.sh  proxy1.sh
job/: Cargo.toml
job/src/: commands.rs  errors.rs  executor.rs  lib.rs  main.rs  state.rs  watcher.rs
job/src/commands/: mod.rs  parser.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: cli.rs  error.rs  interface.rs  lib.rs  main.rs  tcp_server.rs
server/src/interface/: executor_item.rs  filters.rs  maths.rs  mod.rs  rendering.rs  tab_state.rs  tenant_item.rs  watch_item.rs
server/src/interface/tabs/: mod.rs  tab_backends.rs  tab_controller.rs  tab_logs.rs
server/src/interface/tabs/tab_main_view/: executor_item.rs  mod.rs  tenant_item.rs
