[package]
name = "job"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../protocol" }
elyze = "1.5.5"
thiserror = { workspace = true }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand = "0.9.2"