[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
circular-buffer = "1.1.0"
ratatui = "0.29.0"
protocol = { path = "../protocol" }
clap = { version = "4.5.44", features = ["derive"] }
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = { version = "0.4", features = ["clock"] }